# bevy_card3d_kit

./: Cargo.toml  README.md
assets/shaders/: card_material.wgsl
examples/: card_on_card.rs  card_on_zone.rs  card_preview.rs  crack.rs  desk_simple.rs  editor.rs  effect_cut.rs  hand_card.rs  hand_card_with_state.rs  highlight.rs  simple.rs  zone.rs
examples/helpers/: mod.rs
src/: card3d.rs  highlight.rs  lib.rs  preview_plugins.rs
src/card/: card_material.rs  card_mesh.rs  card_namer.rs  card_state.rs  core.rs  event.rs  hand_card.rs  mod.rs  move_card.rs
src/editor/: frame_config.rs  frame_config_data.rs  mod.rs
src/tween/: animation.rs  base_color.rs  card_crack.rs  card_gray.rs  clear_on_finish.rs  mod.rs  shark.rs
src/zone/: desk_zone.rs  events.rs  mod.rs
