[package]
name = "bevy_card3d_kit"
version = "0.1.3"
edition = "2024"
description = "a lib for put and use Card in 3d"
categories = ["game-development"]
homepage = "https://github.com/zzhgithub/bevy_card3d_kit"
repository = "https://github.com/zzhgithub/bevy_card3d_kit"
authors = ["robzhou 1042181618@qq.com"]
readme = "README.md"
exclude = ["doc/*", "examples/*", "target/*", "assets/*"]
license = "MIT OR Apache-2.0"


[workspace]
resolver = "2"

[features]
default = [
    "bevy/bevy_window",
    "bevy/bevy_pbr",
    "bevy/bevy_picking",
    "bevy/bevy_mesh_picking_backend"
]
image_preview = [
    "bevy/bevy_state"
]


[dependencies]
bevy = { version = "0.15.0", default-features = false }
bevy_tween = "0.7"
serde = { version = "1.0.217", features = ["derive"] }
rand = "0.9.0-beta.1"

[dev-dependencies]
bevy-inspector-egui = "0.28.0"

[dev-dependencies.bevy]
version = "0.15.0"
default-features = false
features = [
    "bevy_window",
    "bevy_pbr",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_sprite",
    "hdr",
    "tonemapping_luts",
    "png",
    "bevy_picking",
    "bevy_mesh_picking_backend",
    "bevy_state"
]

[[example]]
name = "simlpe"
path = "examples/simple.rs"

[[example]]
name = "hand_card"
path = "examples/hand_card.rs"

[[example]]
name = "hand_card_with_state"
path = "examples/hand_card_with_state.rs"

[[example]]
name = "zone"
path = "examples/zone.rs"

[[example]]
name = "card_on_zone"
path = "examples/card_on_zone.rs"

[[example]]
name = "card_on_card"
path = "examples/card_on_card.rs"

[[example]]
name = "card_preview"
path = "examples/card_preview.rs"
required-features = ["image_preview"]

[[example]]
name = "desk_simple"
path = "examples/desk_simple.rs"